--- a/docs/install.txt
+++ b/docs/install.txt
@@ -1,15 +1,18 @@
 
 
 dependencies:
-mapnik
-cairo
+(mapnik)
+(cairo)
 python-cairo
 python-mapnik
 python-numpy
-shapelib
 poppler-utils
 pylons
 proj
+postgresql
+python-elementtree or python-xml
+python-dev
+python-psycopg2
 
 
 Openstreetmap (optional, only needed to regenerate map tiles):
@@ -20,5 +23,6 @@ http://wiki.openstreetmap.org/wiki/Mapnik/PostGIS#or_with_Ubuntu
 
 
 Not needed any more:
+shapelib
 pyshapelib (Not not in apt-get, download separately. Needs separate download of shapelib as well. Copy pyshapelib into shapelib dir, then sudo python setup.py install)
 
