--- a/docs/install.txt
+++ b/docs/install.txt
@@ -9,7 +9,7 @@ First, install the following dependencies:
 
 sudo apt-get install python-cairo python-mapnik python-numpy poppler-utils \
 pylons proj postgresql python-elementtree python-dev python-psycopg2 pyro authbind swig \
-proj-bin
+proj-bin scons swig
 
 If python-elementtree doesn't exist, you can try "python-xml" instead.
 
@@ -23,7 +23,7 @@ Install shapemerge2d by going to its directory, and running:
 > scons
 
 (You must install the 'scons' build tool, available in all
-modern linus distributions)
+modern linux distributions)
 
 There is a 'configure'-script in shapemerge2d, but it doesn't build
 the python bindings for shapemerge2d, so it cannot be used. (Or rather,
@@ -34,16 +34,31 @@ The simplest way is probably to edit
 /etc/postgresql/8.4/main/pg_hba.conf
 and change "ident" to "trust" for localhost connections.
 
+You may need to restart postgres for this change to take effect:
+/etc/init.d/postgresql restart
+
 Prepare database user 'flightplanner':
+(as root:)
+su postgres
+psql 
 create ROLE "flightplanner" SUPERUSER LOGIN;
+
 
 Then you need to change /etc/hosts so that "localhost" only appears for 
 127.0.0.1, and not for ::1. (Otherwise adding postgres 'trust' for localhost
-connections doesn't work).
+connections doesn't work). Many distributions already have this right, in which
+case you don't need to do anything to the hosts-file.
+
+Now, update the file "env.sh" to point to correct paths:
+PYTHONPATH = Needs to point to shapemerge2d library and to directory where SwFlightplanner was checked out.
+SWFP_DEVCOMP = The name of the computer primarily used for development. When app is run on this computer, certain things are configured in a way more suitable for development (longer cache life for downloaded airspace definition PDFs, for instance).
+SWFP_DATADIR = Directory where temporary data should be created when generating maps, downloading NOTAMs, etc. This is also where "raw" map data needs to be put for maps to work.
+SWFP_ROOT = The directory where SwFlightplanner was checked out.
+
 
 Then create the database:
 sudo ./resetdb.sh
-WARNING! this removes the database if already present!
+WARNING! this removes the database if already present! You can ignore any error saying that database "flightplanner" does not exist.
 
 Building the C++-component
 A very small part of the application, namely the part that merges the 64x64
@@ -100,14 +115,14 @@ directory. Note, the planner keeps information about all tiles that will be
 generated in memory. If you try to generate for the entire earth, you will need
 a 64-bit system with lots and lots of memory.
 
-Now, run any number of tile-generators workers:
+Now, run any number of tile-generator workers:
 
 > python fplan/lib/tilegen_worker.py
 
 You should be able to run these at any number of machines (given that all machines
 have a working openstreetmap-install, with preferably the exact same maps on them).
 If you have a multi-cpu system, it may be advantageous to run multiple workers
-locally, since map rendering is often CPU-bound.
+even locally, since map rendering is often CPU-bound.
 
 
 
@@ -124,7 +139,7 @@ application has a concept of the "working area". It is impossible to scroll
 outside of this area, for instance. This is defined in the file
 fplan/lib/maptilereader.py, in the function "latlon_limits".
 Note that the AIP-parser, and everything else about the program, is adapted
-to Swedish (and to some extend, Nordic) conditions, so just changing the
+to Swedish (and to some extent, Nordic) conditions, so just changing the
 area covered will not be enough to make the app usable outside of Sweden.
 
 The program is known to fail in many places for negative longitudes. This
@@ -143,9 +158,8 @@ run the application.
 
 
 
-
 Library that is not required, but may be in the future.
-pyshapelib (Not not in apt-get, download separately. Needs separate download
+pyshapelib (Not in ubuntu package repository, download separately. Needs separate download
 of shapelib as well. Copy pyshapelib into shapelib dir, then sudo python
 setup.py install). Shapelib was used to parse a file with all nation
 boundaries in the world
