--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+WARNING!
+
+THIS PROJECT IS DEAD!
+
+YOU MAY USE IT, BUT IT IS NO LONGER MAINTAINED. IT IS KNOWN TO USE DEPENDENCIES WITH KNOWN VULNERABILITIES.
+
+
+
 swflightplanner.se
 
 Hello! You're viewing the source code of the http://swflightplanner.se 
